*	NEW FUNCTION conditionalEval for model evaluation - allows
	other variable performance to be assessed.
*	Make lattice strips white by default for cleaner look on
	complicated plots
*	Complete re-write of import to simplify - changes are NOT
	backward compatible but will allow more developments
*	Allow line breaks in titles using \n to work woth quickText
	- thanks to Karl

Changes in openair 0.5-25 [2012-03-16]
=====================================
*	Fix bug when type = "wd" - would add missing data to north
	sector
*	Add observed histogram to conditionalQuantile
*	Fix bug in timeAverage when ws was not available but wd was
*	Temporaryfix to GoogleMapsPlot documentation due to new
	package version

Changes in openair 0.5-23 [2012-02-28]
=====================================
*	Fix bug in windRose when paddle = FALSE

Changes in openair 0.5-22 [2012-01-12]
=====================================
*	Fix scaling bug that could sometime affect polarPlot grid
	lines
*	Fix regression in importKCL that was intruduced in 0.5-21
*	Make sure wd data are rounded to 10 degrees in polarFreq
*	Fix date padding issue in smoothTrend when type = "site"
*	windRose now gives mean ws in each panel rather than count
*	add otion date.format to timePlot for more control over date
	format on axis

Changes in openair 0.5-21 [2012-02-21]
*	Use C++ code for rolling mean calcs. Much faster, more to
	follow
*	NEW function trajCluster to carry out cluster analysis on back
        trajectories
*	Simple model ranking available in modStats
Changes in openair 0.5-18 [2012-01-16]
*	Update trajectory files to 2011 and add Berlin, Paris
*	Add option seg to pollutionRose to control the width of the
	segments
*	Add option start.day to timeVariation to control the order of
	weekdays.
*	Fixed bug in polarAnnulus where 360 degree winds were absent.
*	Remove dependency on zoo and proto.
* 	Allow importAURN to import new ws/wd from pre-calculated WRF
	data at AURN sites

Changes in openair 0.5-17 [2012-01-12]